<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_XPLANAR_DATA" Id="{e2b8c116-5160-4311-ad1a-9d07a1c76a10}">
    <Declaration><![CDATA[TYPE ST_XPLANAR_DATA :
STRUCT
	uliTimeStamp					: ULINT; // タイムスタンプ
	lrActPosition_x					: LREAL; // 実位置 X
	lrActPosition_y					: LREAL; // 実位置 Y
	lrActPosition_z					: LREAL; // 実位置 Z
	lrActPosition_a					: LREAL; // 実位置 A
	lrActPosition_b					: LREAL; // 実位置 B
	lrActPosition_c					: LREAL; // 実位置 C
	lrActVelocity_x					: LREAL; // 実速度 X
	lrActVelocity_y					: LREAL; // 実速度 Y
	lrActVelocity_z					: LREAL; // 実速度 Z
	lrActVelocity_a					: LREAL; // 実速度 A
	lrActVelocity_b					: LREAL; // 実速度 B
	lrActVelocity_c					: LREAL; // 実速度 C
	lrSetPosition_x					: LREAL; // 指令位置 X
	lrSetPosition_y					: LREAL; // 指令位置 Y
	lrSetPosition_z					: LREAL; // 指令位置 Z
	lrSetPosition_a					: LREAL; // 指令位置 A
	lrSetPosition_b					: LREAL; // 指令位置 B
	lrSetPosition_c					: LREAL; // 指令位置 C
	lrSetVelocity_x					: LREAL; // 指令速度 X
	lrSetVelocity_y					: LREAL; // 指令速度 Y
	lrSetVelocity_z					: LREAL; // 指令速度 Z
	lrSetVelocity_a					: LREAL; // 指令速度 A
	lrSetVelocity_b					: LREAL; // 指令速度 B
	lrSetVelocity_c					: LREAL; // 指令速度 C
	uiState							: UINT; // Moverの状態
	bState_Error					: BOOL; // Moverにエラーが発生したか
	uiMoverErrorID					: UINT; // Moverのエラー番号
	uiDemoState						: UINT; // デモのシーケンス番号
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>