<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_StXPlanarData" Id="{e003ed92-715c-4594-ac45-4de666637235}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_StXPlanarData IMPLEMENTS ITF_StXPlanarData
VAR_INPUT
	fbMover								: REFERENCE TO MC_PlanarMover;
END_VAR
VAR_OUTPUT
	ST_XPLANAR_DATA						: ST_XPLANAR_DATA;
END_VAR
VAR
	ActPosition							: MoverVector;
	ActVelocity							: MoverVector;
	SetPosition							: MoverVector;
	SetVelocity							: MoverVector;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ActPosition := fbMover.MCTOPLC.ACT.ActPos;
ActVelocity := fbMover.MCTOPLC.ACT.ActVelo;
SetPosition := fbMover.MCTOPLC.SET.SetPos;
SetVelocity := fbMover.MCTOPLC.SET.SetVelo;

//General
ST_XPLANAR_DATA.uiState := THIS^.GetState;
ST_XPLANAR_DATA.bState_Error := THIS^.GetStateError;
ST_XPLANAR_DATA.uiMoverErrorID := THIS^.GetErrorID;
ST_XPLANAR_DATA.uliTimeStamp := THIS^.GetTimeStamp;
ST_XPLANAR_DATA.uiDemoState := THIS^.GetDemoState;

// ActPosition
ST_XPLANAR_DATA.lrActPosition_x := THIS^.GetActPosition_x;
ST_XPLANAR_DATA.lrActPosition_y := THIS^.GetActPosition_y;
ST_XPLANAR_DATA.lrActPosition_z := THIS^.GetActPosition_z;
ST_XPLANAR_DATA.lrActPosition_a := THIS^.GetActPosition_a;
ST_XPLANAR_DATA.lrActPosition_b := THIS^.GetActPosition_b;
ST_XPLANAR_DATA.lrActPosition_c := THIS^.GetActPosition_c;
// SetPosition
ST_XPLANAR_DATA.lrSetPosition_x := THIS^.GetSetPosition_x;
ST_XPLANAR_DATA.lrSetPosition_y := THIS^.GetSetPosition_y;
ST_XPLANAR_DATA.lrSetPosition_z := THIS^.GetSetPosition_z;
ST_XPLANAR_DATA.lrSetPosition_a := THIS^.GetSetPosition_a;
ST_XPLANAR_DATA.lrSetPosition_b := THIS^.GetSetPosition_b;
ST_XPLANAR_DATA.lrSetPosition_c := THIS^.GetSetPosition_c;
// ActVelocity
ST_XPLANAR_DATA.lrActVelocity_x := THIS^.GetActVelocity_x;
ST_XPLANAR_DATA.lrActVelocity_y := THIS^.GetActVelocity_y;
ST_XPLANAR_DATA.lrActVelocity_z := THIS^.GetActVelocity_z;
ST_XPLANAR_DATA.lrActVelocity_a := THIS^.GetActVelocity_a;
ST_XPLANAR_DATA.lrActVelocity_b := THIS^.GetActVelocity_b;
ST_XPLANAR_DATA.lrActVelocity_c := THIS^.GetActVelocity_c;
// SetVelocity
ST_XPLANAR_DATA.lrSetVelocity_x := THIS^.GetSetVelocity_x;
ST_XPLANAR_DATA.lrSetVelocity_y := THIS^.GetSetVelocity_y;
ST_XPLANAR_DATA.lrSetVelocity_z := THIS^.GetSetVelocity_z;
ST_XPLANAR_DATA.lrSetVelocity_a := THIS^.GetSetVelocity_a;
ST_XPLANAR_DATA.lrSetVelocity_b := THIS^.GetSetVelocity_b;
ST_XPLANAR_DATA.lrSetVelocity_c := THIS^.GetSetVelocity_c;]]></ST>
    </Implementation>
    <Folder Name="ActPosition" Id="{eea02ac7-7096-4ce3-a72a-6877ed6e563c}" />
    <Folder Name="ActVelocity" Id="{f4a11e78-bd1f-40ad-9067-2a28fb52fe5a}" />
    <Folder Name="General" Id="{476f7462-91e6-448a-ab5c-2c0a7b46a39b}" />
    <Folder Name="SetPosition" Id="{164555b5-f2a4-4feb-b096-d2312bb7395b}" />
    <Folder Name="SetVelocity" Id="{9d0436d7-118c-4db9-9606-27dae6bd2400}" />
    <Method Name="GetActPosition_a" Id="{9a778402-58b4-4955-bb88-2ffe698e137a}" FolderPath="ActPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActPosition_a : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActPosition_a := ActPosition.a;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActPosition_b" Id="{c774a813-43e6-4053-88f8-582dc006ec0b}" FolderPath="ActPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActPosition_b : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActPosition_b := ActPosition.b;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActPosition_c" Id="{74a03d50-96bb-43da-bb8f-aecb208cd273}" FolderPath="ActPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActPosition_c : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActPosition_c := ActPosition.c;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActPosition_x" Id="{24b82646-1eff-413d-8ef0-06e8b110c47a}" FolderPath="ActPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActPosition_x : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActPosition_x := ActPosition.x;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActPosition_y" Id="{498a8a25-79ac-4310-9cdf-74ac93d4a9d9}" FolderPath="ActPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActPosition_y : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActPosition_y := ActPosition.y;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActPosition_z" Id="{29e79948-2467-4fc6-a18a-4546e26d2b88}" FolderPath="ActPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActPosition_z : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActPosition_z := ActPosition.z;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActVelocity_a" Id="{d8e46300-3496-4713-bcdb-61361e230700}" FolderPath="ActVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActVelocity_a : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActVelocity_a := ActVelocity.a;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActVelocity_b" Id="{b613af1c-1956-4214-9e85-ec1bf500203d}" FolderPath="ActVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActVelocity_b : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActVelocity_b := ActVelocity.b;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActVelocity_c" Id="{0cd1627f-3764-417f-90b7-df87be4408cc}" FolderPath="ActVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActVelocity_c : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActVelocity_c := ActVelocity.c;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActVelocity_x" Id="{9650db03-e53b-4f10-859b-6c7ee8c40b90}" FolderPath="ActVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActVelocity_x : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActVelocity_x := ActVelocity.x;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActVelocity_y" Id="{2dedd5c1-e486-413a-bd49-08a583fed0ac}" FolderPath="ActVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActVelocity_y : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActVelocity_y := ActVelocity.y;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetActVelocity_z" Id="{e9096169-6f32-40bb-bc43-fb8410b419ed}" FolderPath="ActVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetActVelocity_z : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetActVelocity_z := ActVelocity.z;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetDemoState" Id="{251c8cfe-1315-4be2-a2fb-71a394881ab0}" FolderPath="General\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetDemoState : UINT
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetErrorID" Id="{c35b675d-ed6d-4f10-982e-9c6e08f51dce}" FolderPath="General\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetErrorID : UINT
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetPosition_a" Id="{4ee85e73-9f2e-4768-a440-d5853c7f8e91}" FolderPath="SetPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetPosition_a : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetPosition_b" Id="{cf4c213a-ce80-4202-8353-6286d758f551}" FolderPath="SetPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetPosition_b : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetPosition_c" Id="{8bfc7cfc-6c36-4665-a18a-63aa90bfabed}" FolderPath="SetPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetPosition_c : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetPosition_x" Id="{17cca9dd-db20-47ca-a178-90add1dc4083}" FolderPath="SetPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetPosition_x : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetPosition_y" Id="{ed3e25b5-afd3-4df7-a69d-e900b96edd6f}" FolderPath="SetPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetPosition_y : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetPosition_z" Id="{d970f4a7-0367-4cbb-b307-ae36e44350ce}" FolderPath="SetPosition\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetPosition_z : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetVelocity_a" Id="{f7a85b30-5a8c-46c8-83ea-47b360fe48ea}" FolderPath="SetVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetVelocity_a : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetVelocity_b" Id="{1b578392-5607-4be2-953f-9b6c48c797ee}" FolderPath="SetVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetVelocity_b : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetVelocity_c" Id="{8734e2cc-eeeb-4401-817d-a50a52b03733}" FolderPath="SetVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetVelocity_c : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetVelocity_x" Id="{489f13f5-ff62-499a-a612-db4e01a7b4f8}" FolderPath="SetVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetVelocity_x : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetVelocity_y" Id="{ab2c021b-86ea-4217-b89f-9673337b45b5}" FolderPath="SetVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetVelocity_y : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSetVelocity_z" Id="{8db3b38f-69bc-4ebe-a003-9f27e34c1cdf}" FolderPath="SetVelocity\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetSetVelocity_z : LREAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetState" Id="{4fd6b760-ba87-42e8-9784-da983bc25b59}" FolderPath="General\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetState : UINT
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetStateError" Id="{d9a1e248-b7d3-4769-a43b-18fbc07f617c}" FolderPath="General\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetStateError : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetTimeStamp" Id="{d1244442-9456-477a-8000-398db107258c}" FolderPath="General\">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD GetTimeStamp : ULINT
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_StXPlanarData">
      <LineId Id="50" Count="0" />
      <LineId Id="56" Count="2" />
      <LineId Id="51" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="45" Count="4" />
      <LineId Id="44" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="4" />
      <LineId Id="21" Count="5" />
      <LineId Id="20" Count="0" />
      <LineId Id="30" Count="12" />
      <LineId Id="28" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActPosition_a">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActPosition_b">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActPosition_c">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActPosition_x">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActPosition_y">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActPosition_z">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActVelocity_a">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActVelocity_b">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActVelocity_c">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActVelocity_x">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActVelocity_y">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetActVelocity_z">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetDemoState">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetErrorID">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetPosition_a">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetPosition_b">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetPosition_c">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetPosition_x">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetPosition_y">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetPosition_z">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetVelocity_a">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetVelocity_b">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetVelocity_c">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetVelocity_x">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetVelocity_y">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetSetVelocity_z">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetState">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetStateError">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_StXPlanarData.GetTimeStamp">
      <LineId Id="4" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>